--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,13 +2,13 @@
 name: Build Box64 ARM64
 
 on:
-  workflow_dispatch:          # 手动触发
+  workflow_dispatch:
   push:
-    branches: [ main ]        # 推送即触发
+    branches: [ main ]
 
 jobs:
   build:
-    runs-on: ubuntu-22.04-arm   # GitHub 公测 ARM 运行器
+    runs-on: ubuntu-22.04-arm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,11 +24,12 @@ jobs:
                 -DCMAKE_BUILD_TYPE=Release \
                 -DARM_DYNAREC=ON \
                 -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc \
-                -DCMAKE_EXE_LINKER_FLAGS="-static -s"
+                -DSTATICBUILD=1 \
+                -DHAVE_TRACE=0
           cmake --build build -j$(nproc)
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: box64-linux-arm64
+          name: box64-linux-arm64-static
           path: build/box64
