--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,5 +1,5 @@
 # .github/workflows/arm64.yml
-name: Build Box64 ARM64
+name: Build Box64 ARM64-static
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04-arm
+    runs-on: ubuntu-22.04-arm   # GitHub 公测 ARM 运行器
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,18 +18,28 @@ jobs:
           sudo apt-get update -qq
           sudo apt-get install -y cmake gcc-aarch64-linux-gnu git
 
-      - name: Build
+      # 关键：静态构建 + 保留调试符号（体积大但可调）
+      - name: Build static box64
         run: |
           cmake -B build \
-                -DCMAKE_BUILD_TYPE=Release \
+                -DCMAKE_BUILD_TYPE=RelWithDebInfo \
                 -DARM_DYNAREC=ON \
                 -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc \
                 -DSTATICBUILD=1 \
-                -DHAVE_TRACE=0
+                -DHAVE_TRACE=0 \
+                -DCMAKE_EXE_LINKER_FLAGS=""   # 去掉默认 -s，保留符号
           cmake --build build -j$(nproc)
 
-      - name: Upload artifact
+      # 可选：再 strip 一个瘦身版供发布
+      - name: Strip copy
+        run: |
+          cp build/box64 build/box64-stripped
+          aarch64-linux-gnu-strip build/box64-stripped
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: box64-linux-arm64-static
-          path: build/box64
+          name: box64-arm64-static
+          path: |
+            build/box64            # 完整版（带符号，可调）
+            build/box64-stripped   # 瘦身版（无符号，分发）
