--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,39 +1,31 @@
 # .github/workflows/arm64.yml
-name: Build Box64 ARM64-static
+name: Build Box64 ARM64
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:          # 手动触发
   push:
-    branches: [ main ]
+    branches: [ main ]        # 推送即触发
 
 jobs:
   build:
     runs-on: ubuntu-22.04-arm   # GitHub 公测 ARM 运行器
     steps:
-      - name: Build static box64
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install deps
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y cmake gcc-aarch64-linux-gnu git
+      - name: Build
         run: |
           cmake -B build \
-                -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+                -DCMAKE_BUILD_TYPE=Release \
                 -DARM_DYNAREC=ON \
-                -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc \
-                -DSTATICBUILD=1 \
-                -DHAVE_TRACE=0 \
-                -DCMAKE_EXE_LINKER_FLAGS=""
-          cmake --build build -v -j$(nproc)
-
-      - name: Check build result
-        run: |
-          find build -name box64 -type f -ls   # 列出所有 box64 路径
-
-      - name: Strip copy
-        run: |
-          cp $(find build -name box64 -type f) build/box64-stripped
-          aarch64-linux-gnu-strip build/box64-stripped
-
-      - name: Upload artifacts
+                -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc
+          cmake --build build -j$(nproc)
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: box64-arm64-static
-          path: |
-            build/*/box64
-            build/box64-stripped
+          name: box64-linux-arm64
+          path: build/box64
